--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,14 @@
     <FrameLayout
         android:id="@+id/content_body"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
     </FrameLayout>
 
     <android.support.design.widget.NavigationView
@@ -25,7 +25,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:elevation="16dp"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_view"/>
+        app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
